syntax = "proto3";

option java_multiple_files = true;
package currencyconversion;

service Converter {
  rpc ConvertCurrency (ConvertRequest) returns (ConvertResponse) {}
}

message ConvertRequest {
  string base_currency = 1;
  string target_currency = 2;
  double amount = 3;
}

message ConvertResponse {
  double converted_amount = 1;
  string currency = 2;
  double service_fee = 3;
  double base_currency_service_fee = 4;
}

// run the build wallet module for creating proto buff auto generated file for this proto file and it will get
// generated inside build directory with above mentioned above package.
